<resources>
    <string name="app_name">Krillin\'s Wife</string>
    <string name="Welcome">Welcome to Krillin\'s Wife</string>
    <string name="CreateAccount">New? Create a new account</string>
    <string name="SignIn">Sign In</string>
    <string name="Register">Register</string>
    <string name="Back">&lt;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account_title">Create Account</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="backWord">Back</string>
    <string name="Update">Save</string>
    <string name="invalid_login">Invalid username or password</string>
</resources>