<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DataBaseTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backToLogin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:padding="12sp"
                android:text="@string/Back"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/create_account_title"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textColor="@color/white" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorSecondary"
                    android:text="@string/Register" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>